--- a/jankubr/events/app/assets/stylesheets/events.css.scss
+++ b/jankubr/events/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,17 @@
-// Place all the styles related to the Events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+label {
+  display: inline-block;
+  width: 100px;
+}
+textarea {
+  height: 100px;
+  width: 300px;
+}
+#save_cancel {
+  margin-top: 40px;
+}
+table {
+  width: 100%;
+  th {
+    text-align: left;
+  }
+}
