Completed required functionality

--- a/palodelincak/events/app/views/layouts/application.html.slim
+++ b/palodelincak/events/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
     = csrf_meta_tags
 
   body
-    header#header
+    header#main-header
       .container
         .row
           .col-sm-12.text-center
