--- a/palodelincak/events/app/assets/stylesheets/application.scss
+++ b/palodelincak/events/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
 @import "compass";
 @import "bootstrap";
 @import "font-awesome";
+
+@import "variables";
+
+@import "structure/structure";
+@import "events/events";
