--- a/palodelincak/events/app/views/events/index.html.slim
+++ b/palodelincak/events/app/views/events/index.html.slim
@@ -1,1 +1,5 @@
-| Events
+.row
+  .col-sm-12
+    #events.events.panel-group
+      - @events.each do |event|
+        = render "event", event: event
