--- a/jankubr/events/app/views/events/_join_or_leave_form.html.erb
+++ b/jankubr/events/app/views/events/_join_or_leave_form.html.erb
@@ -1,5 +1,8 @@
 <% if event.user_attending?(current_user) %>
   <%= t('events.attending_this_event') %><br>
+  <%= form_for event, url: leave_event_path(event), method: :patch do %>
+    <%= submit_tag t('events.leave') %>
+  <% end %>
 <% else %>
   <%= form_for event, url: join_event_path(event), method: :patch do %>
     <%= submit_tag t('events.join') %>
