--- a/jankubr/events/app/views/events/_form.html.erb
+++ b/jankubr/events/app/views/events/_form.html.erb
@@ -25,6 +25,11 @@
       <%= f.label :description %>
       <%= f.text_area :description %>
     </p>
+
+    <p>
+      <%= f.label :capacity %>
+      <%= f.text_field :capacity %>
+    </p>
   </div>
   <div id="save_cancel">
     <%= f.submit t('common.save') %>
