Event can be joined only if starts later than 1 day from now

--- a/jankubr/events/app/views/events/_join_or_leave_form.html.erb
+++ b/jankubr/events/app/views/events/_join_or_leave_form.html.erb
@@ -4,7 +4,9 @@
     <%= submit_tag t('events.leave') %>
   <% end %>
 <% elsif event.capacity_reached? %>
-  <%= t('events.capacity_reached') %>
+  <%= t('events.capacity_reached') %><br>
+<% elsif event.too_late_to_join? %>
+  <%= t('events.too_late_to_join') %><br>
 <% else %>
   <%= form_for event, url: join_event_path(event), method: :patch do %>
     <%= submit_tag t('events.join') %>
