Can create repeated events

--- a/jankubr/events/app/assets/stylesheets/events.css.scss
+++ b/jankubr/events/app/assets/stylesheets/events.css.scss
@@ -16,6 +16,9 @@ table {
   th {
     text-align: left;
   }
+  td {
+    padding: 10px;
+  }
   tr.attending_event td {
     background-color: $light_grey;
   }
