Make tests pass

--- a/eventer/app/views/events/index.html.erb
+++ b/eventer/app/views/events/index.html.erb
@@ -1,12 +1,24 @@
 <h1>Eventer</h1>
 <% if @events.any? %>
-<h2>All events</h2>
-<ul>
-  <% @events.each do |event| %>
-      <li>
-        <h3><%= event.name %><small><%= time_tag(event.happening_on) %></small></h3>
-        <p><%= event.description %></p>
-      </li>
-  <% end %>
-</ul>
+    <h2>All events</h2>
+    <ul>
+      <% @events.each do |event| %>
+          <li>
+            <h3><%= event.name %>
+              <small><%= time_tag(event.happening_on) %></small>
+            </h3>
+            <p>
+              <% if user_signed_in? %>
+                  <% if event.attended_by?(current_user) %>
+                      Attending
+                  <% else %>
+                      <%= link_to 'Attend', attend_event_path(event), method: :post %>
+                  <% end %>
+              <% end %>
+            </p>
+
+            <p><%= event.description %></p>
+          </li>
+      <% end %>
+    </ul>
 <% end %>
