--- a/eventer/app/views/layouts/application.html.erb
+++ b/eventer/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<p>
+  <% unless user_signed_in? %>
+      <%= link_to 'Sign up', new_user_registration_path %>
+      <%= link_to 'Sign in', new_user_session_path %>
+  <% else %>
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+  <% end %>
+</p>
+
 <%= yield %>
 
 </body>
