adding zurb foundation

--- a/m1k3/events/app/views/events/_event_row.html.haml
+++ b/m1k3/events/app/views/events/_event_row.html.haml
@@ -1,2 +1,6 @@
 %tr
   %td= event_row.name
+  %td= event_row.description
+  %td=l event_row.start_at
+  %td= event_row.end_at.present? ? l(event_row.end_at) : 'n/a'
+  %td Subscribe
