--- a/m1k3/events/app/views/events/_table.html.haml
+++ b/m1k3/events/app/views/events/_table.html.haml
@@ -1,2 +1,8 @@
 %table
+  %tr
+    %td Name
+    %td Description
+    %td Starts at
+    %td Ends at
+    %td Actions
   = render partial: 'event_row', collection: events
