--- a/m1k3/events/app/views/layouts/application.html.haml
+++ b/m1k3/events/app/views/layouts/application.html.haml
@@ -10,6 +10,11 @@
     = javascript_include_tag 'vendor/modernizr'
     = csrf_meta_tags
 
+  - if user_signed_in?
+    Signed in as
+    = current_user.email
+    = link_to 'Sign out', destroy_user_session_path, data: { method: :delete }
+
   %p.notice= notice
   %p.alert= alert
   = yield
