refactoring and improving visuals

--- a/m1k3/events/app/views/events/_table.html.haml
+++ b/m1k3/events/app/views/events/_table.html.haml
@@ -5,4 +5,4 @@
     %td Starts at
     %td Ends at
     %td Actions
-  = render partial: 'event_row', collection: events
+  = render partial: 'table_row', collection: events, as: :event
