--- a/m1k3/events/app/views/layouts/application.html.haml
+++ b/m1k3/events/app/views/layouts/application.html.haml
@@ -11,12 +11,19 @@
     = csrf_meta_tags
 
   - if user_signed_in?
-    Signed in as
-    = current_user.email
-    = link_to 'Sign out', destroy_user_session_path, data: { method: :delete }
+    %nav.top-bar
+      %section.top-bar-section
+        %ul.right
+          %li
+            %a
+              Signed in as
+              = current_user.email
+          %li= link_to 'Sign out', destroy_user_session_path, data: { method: :delete }
 
-  %p.notice= notice
-  %p.alert= alert
+  - if notice
+    .alert-box.success= notice
+  - if alert
+    .alert-box.alert= alert
   = yield
 
   = javascript_include_tag "application", 'data-turbolinks-track' => true
