--- a/tomassirny/sentiments/events/templates/events/event_list.html
+++ b/tomassirny/sentiments/events/templates/events/event_list.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Events</title>
-</head>
-<body>
-<h1>Events</h1>
-<div class="list">
-{% for event in object_list %}
-        <span>{{ event.date }}</span>
-        <span>{{ event.name }}</span>
-        <span>{{ event.description }}</span>
-        <span>{{ event.from_time }}</span>
-        <span>{{ event.to_time }}</span>
-{% empty %}
-    <span>No events available</span>
-{% endfor %}
-</div>
+{% load staticfiles %}
 
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Events</title>
+
+    <!-- Bootstrap -->
+    <link href='{% static "css/bootstrap.min.css" %}' rel="stylesheet">
+    <link href='{% static "css/bootstrap-theme.min.css" %}' rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style id="holderjs-style" type="text/css"></style>
+</head>
+<body role="document">
+<div class="container" role="main">
+    <div class="jumbotron">
+        <h1>Events</h1>
+    </div>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Date</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>From</th>
+                <th>To</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for event in object_list %}
+                <tr>
+                    <td>{{ event.date }}</td>
+                    <td>{{ event.name }}</td>
+                    <td>{{ event.description }}</td>
+                    <td>{{ event.from_time }}</td>
+                    <td>{{ event.to_time }}</td>
+                </tr>
+            {% empty %}
+                <tr>
+                    <td>No events available</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src='{% static "js/bootstrap.min.js" %}'></script>
 </body>
 </html>
