Fix unstyled subpages
Reference assets by absolute HTTP path

--- a/srigi/expressjs/src/views/layout.jade
+++ b/srigi/expressjs/src/views/layout.jade
@@ -7,8 +7,8 @@ html
     meta(name="apple-mobile-web-app-status-bar-style", content="black")
 
     title Ruby sentiments #1
-    link(rel="stylesheet", href="vendor/ratchet/dist/css/ratchet.css")
-    link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="/vendor/ratchet/dist/css/ratchet.css")
+    link(rel="stylesheet", href="/css/main.css")
 
   body
     block content
