--- a/newPOPE-nette-php/src/app/templates/Homepage/default.latte
+++ b/newPOPE-nette-php/src/app/templates/Homepage/default.latte
@@ -19,8 +19,11 @@
     <td>{$event->from->format("%H:%I")}</td>
     <td>{$event->to->format("%H:%I")}</td>
     <td>
-      <a n:if="!$presenter->isUserAttendedTo($event->id)" n:href="Event:signIn $event->id">Sign in</a>
-      <span n:if="$presenter->isUserAttendedTo($event->id)">Signed!</span>
+      {if !$presenter->isUserAttendedTo($event->id)}
+        <a n:href="Event:signIn $event->id">Sign in</a>
+      {else}
+        <span>Signed!</span>
+      {/if}
     </td>
   </tr>
 </table>
