--- a/minio-sk/app/views/events/index.html.erb
+++ b/minio-sk/app/views/events/index.html.erb
@@ -8,7 +8,7 @@
               <small><%= time_tag(event.happening_on) %></small>
             </h3>
             <p>
-              <% if user_signed_in? %>
+              <% if current_user.signed_in? %>
                   <% if event.attended_by?(current_user) %>
                       Attending
                   <% else %>
